--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "deploy": "next run export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "classnames": "2.3.1",
@@ -24,6 +25,7 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "autoprefixer": "10.4.0",
+    "gh-pages": "^4.0.0",
     "postcss": "8.4.5",
     "tailwindcss": "3.0.5"
   }
